# DendyEngine

./: .gitignore  CMakeLists.txt  CreateNewClass.bat  CreateNewClass.py  Generate_vs.bat  LICENSE  README.md  ReadmeExternalLibs.txt  Template.cpp  Template.h  Update_vs.bat  conventions.txt
cmake/: FindGLM.cmake  FindSDL2.cmake  FindVulkan.cmake
code/: main.cpp
code/DendyFoundation/: Types.h
code/DendyFoundation/CustomTypes/: DyString.cpp  DyString.h  DyVec.h
code/DendyFoundation/DebugTools/: DebugStack.cpp  DebugStack.h  DebugSystem.h  Timer.cpp  Timer.h
code/DendyFoundation/DesignPatterns/: SingletonPattern.cpp  SingletonPattern.h
code/DendyFoundation/MemoryManagment/: AllocatorInterface.h  MemoryManager.cpp  MemoryManager.h
code/DendyFoundation/ParallelComputing/: FiberJobManager.cpp  FiberJobManager.h  ThreadManager.cpp  ThreadManager.h
code/PixPhetamine/SceneRendering/: SceneRender.h
code/PixPhetamine/VulkanBuffer/: VolkBuffer.cpp  VolkBuffer.h
code/PixPhetamine/VulkanCommand/: VolkCommandPool.cpp  VolkCommandPool.h  VolkCommandSubmitter.cpp  VolkCommandSubmitter.h
code/PixPhetamine/VulkanDebug/: VolkDebug.h
code/PixPhetamine/VulkanDescriptor/: VolkDescriptorLayout.cpp  VolkDescriptorLayout.h  VolkDescriptorPool.cpp  VolkDescriptorPool.h
code/PixPhetamine/VulkanImage/: VolkFramebuffer.cpp  VolkFramebuffer.h  VolkImage.cpp  VolkImage.h  VolkImageHandle.cpp  VolkImageHandle.h  VolkImageLoader.cpp  VolkImageLoader.h
code/PixPhetamine/VulkanMemory/: AllocatorInterface.cpp  AllocatorInterface.h  VolkAllocatorInterface.cpp  VolkAllocatorInterface.h  VolkBlock.cpp  VolkBlock.h  VolkChunk.cpp  VolkChunk.h  VolkChunkAllocator.cpp  VolkChunkAllocator.h  VolkGPUAllocator.cpp  VolkGPUAllocator.h
code/PixPhetamine/VulkanPipeline/: VolkPipeline.cpp  VolkPipeline.h  VolkPipelineLayout.cpp  VolkPipelineLayout.h  VolkRenderingPass.cpp  VolkRenderingPass.h
code/PixPhetamine/VulkanSynchronization/: VolkFence.cpp  VolkFence.h  VolkSemaphore.cpp  VolkSemaphore.h
code/PixPhetamine/VulkanSystem/: VolkGPU.cpp  VolkGPU.h  VolkInstance.cpp  VolkInstance.h  VolkShader.cpp  VolkShader.h  VolkSwapchain.cpp  VolkSwapchain.h
code/PixPhetamine/WindowHandle/: GLFWWindowHandle.cpp  GLFWWindowHandle.h  SDLWindowHandle.cpp  SDLWindowHandle.h  WindowHandleInterface.cpp  WindowHandleInterface.h
code/VolkPhetamine/SceneRendering/: SceneRender.h
code/VolkPhetamine/VulkanBuffer/: VolkBuffer.cpp  VolkBuffer.h
code/VolkPhetamine/VulkanCommand/: VolkCommandPool.cpp  VolkCommandPool.h  VolkCommandSubmitter.cpp  VolkCommandSubmitter.h
code/VolkPhetamine/VulkanDescriptor/: VolkDescriptorLayout.cpp  VolkDescriptorLayout.h  VolkDescriptorPool.cpp  VolkDescriptorPool.h
code/VolkPhetamine/VulkanImage/: VolkFramebuffer.cpp  VolkFramebuffer.h  VolkImage.cpp  VolkImage.h  VolkImageHandle.cpp  VolkImageHandle.h  VolkImageLoader.cpp  VolkImageLoader.h
code/VolkPhetamine/VulkanMemory/: AllocatorInterface.cpp  AllocatorInterface.h  VolkAllocatorInterface.cpp  VolkAllocatorInterface.h  VolkBlock.cpp  VolkBlock.h  VolkChunk.cpp  VolkChunk.h  VolkChunkAllocator.cpp  VolkChunkAllocator.h  VolkGPUAllocator.cpp  VolkGPUAllocator.h
code/VolkPhetamine/VulkanPipeline/: VolkPipeline.cpp  VolkPipeline.h  VolkPipelineLayout.cpp  VolkPipelineLayout.h  VolkRenderingPass.cpp  VolkRenderingPass.h
code/VolkPhetamine/VulkanSynchronization/: VolkFence.cpp  VolkFence.h  VolkSemaphore.cpp  VolkSemaphore.h
code/VolkPhetamine/VulkanSystem/: VolkGPU.cpp  VolkGPU.h  VolkInstance.cpp  VolkInstance.h  VolkShader.cpp  VolkShader.h  VolkSwapchain.cpp  VolkSwapchain.h
code/VolkPhetamine/WindowHandle/: GLFWWindowHandle.cpp  GLFWWindowHandle.h  SDLWindowHandle.cpp  SDLWindowHandle.h  WindowHandleInterface.cpp  WindowHandleInterface.h
include/DendyFoundation/V1.0.0/: DebugStack.h  IniFileReader.h  Types.h
include/VolkPhetamine/V1.0.0/: SDLWindowHandle.h  WindowHandleInterface.h
